<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dolphindroid 2018</string>
    <string name="about">About</string>
    <string name="about_content">Copyright © 2015, Flavio Zavan.
        2018 version by Bárdos Dávid.
        This application is free software,
        for more information and access to
        the source code, please visit
        http://github.com/gridranger/dolphindroid</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="custom_connection">Custom Connection</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="directional_button">Directional button</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="minus">-</string>
    <string name="home">Home</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="ur">U+R</string>
    <string name="dr">D+R</string>
    <string name="dl">D+L</string>
    <string name="ul">U+L</string>
    <string name="change_orientation">Change orientation</string>
    <string name="presses_to_go">" more back button presses to disconnect"</string>
    <string name="resolv_failed">Failed to resolve hostname</string>
    <string name="socket_failed">Failed to open socket</string>
    <string name="udp_warning_title">UDP warning</string>
    <string name="udp_warning">Failed to map available Dolphin sockets due to device
        security settings or port conflict. Please use the Custom button to setup
        the connection manually.</string>
    <string name="ok">Okay</string>


</resources>
