<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gridranger.dolphindroid.ControllerActivity">


    <android.gesture.GestureOverlayView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gesture_ir">
    </android.gesture.GestureOverlayView>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/change_orientation"
        android:background="@drawable/ic_blank_button"
        android:src="@android:drawable/ic_menu_always_landscape_portrait"
        android:onClick="changeOrientation"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/directional_button"
            android:src="@drawable/ic_directional" />
        <Button
            android:id="@+id/button_north_west"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_north"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_north_east"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_west"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_east"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="80dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_south_west"
            android:layout_width="40dp"
            android:layout_marginTop="80dp"
            android:layout_height="40dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_south"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="40dp"
            android:background="#00ffffff" />
        <Button
            android:id="@+id/button_south_east"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="80dp"
            android:background="#00ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/button_a"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_a_button"
            android:contentDescription="@string/a" />
        <Button
            android:id="@+id/button_b"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/b"
            android:background="@drawable/ic_b_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="160dp">
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/minus"
            android:id="@+id/button_minus"
            android:background="@drawable/ic_minus_button" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/home"
            android:id="@+id/button_home"
            android:background="@drawable/ic_home_button"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/plus"
            android:id="@+id/button_plus"
            android:background="@drawable/ic_plus_button"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/one"
            android:background="@drawable/ic_1_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/two"
            android:id="@+id/button_2"
            android:background="@drawable/ic_2_button"/>
    </LinearLayout>

</RelativeLayout>
